--- a/.github/workflows/EnvTry.yml
+++ b/.github/workflows/EnvTry.yml
@@ -25,7 +25,7 @@ on:
     runs-on: ubuntu-latest
     if: github.event_name == 'workflow_dispatch'
     needs: Build
-    environment: Load-Test
+    environment: LoadTest
     steps:
       - run: |
           echo "🧪 Testing..."
@@ -35,7 +35,7 @@ on:
     runs-on: ubuntu-latest
     needs: [Test, Load-Test]
     environment:
-      name: Production
+      name: Prod
       url: https://writeabout.net
     if: github.event.inputs.environment == 'Production'
     steps:
